# Coisas

./: .gitignore  .path_progress  LICENSE.md  README.md
C#/clientes/: Program.cs  clientes.csproj
C#/collections/: Program.cs
C#/componentes/: Ferramentas.cs  ValidacaoCNPJ.cs  ValidacaoCPF.cs
C#/condicoes/: Program.cs
C#/funcoes/: Program.cs
C#/loops/: Program.cs
C#/programa_funcional/: Program.cs
C#/recursivo/: Program.cs
C++/classes/: BubbleSort  BubbleSort.cpp  Conta  Conta.cpp  Friend  Friend.cpp  Heranca  Heranca.cpp  Pilha  Pilha.cpp
C++/grafos/: ListaAdjacencia  ListaAdjacencia.cpp
C++/ponteiros/: MyStrCat  MyStrCat.cpp
C++/structs/: Struct  Struct.cpp
Html (Deprecated)/: opa.html
Html (Deprecated)/projeto-glass-html5/: index.html
Java/eda/: .project
Java/programs/: .project
Python/Misc/: Organizador.py  findFiles.py
Python/Mundo 1/: ex001.py  ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py  ex013.py  ex014.py  ex015.py  ex016.py  ex017.py  ex018.py  ex019.py  ex020.py  ex022.py  ex023.py  ex024.py  ex025.py  ex026.py  ex027.py  ex028.py  ex029.py  ex030.py  ex031.py  ex032.py  ex033.py  ex034.py  ex035.py
Python/Mundo 2/: ex036.py  ex037.py  ex038.py  ex039.py  ex040.py  ex041.py  ex042.py  ex043.py  ex044.py  ex045.py  ex046.py  ex047.py  ex048.py  ex049.py  ex050.py  ex051.py  ex052.py  ex053.py  ex054.py  (+17 more)
Ruby/: .solargraph.yml
Rust/the-book/14. crates_io/: Cargo.toml
Rust/the-book/14. crates_io/src/: lib.rs
Tensorflow/: image_pre-processing.py  teste.py
(+576 files in other folders)
